# ccProxy

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
macos/ccProxyMenu/: App.swift  Info.plist
packaging/: ccproxy.service
packaging/scripts/: postinst  postrm  prerm
scripts/: build-mac-app.sh  deploy.sh  server.sh
src/: anthropic.rs  auth.rs  config.rs  dashboard.html  db.rs  error.rs  main.rs  models.rs  server.rs  sse.rs  upstream.rs  usage.rs
systemd/: ccproxy.service
