[package]
name = "ccproxy"
version = "0.1.0"
edition = "2021"
description = "Local OpenAI/Anthropic to Codex Responses proxy with ChatGPT OAuth and upstream HTTP proxy support."

[[bin]]
name = "ccproxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "http2", "gzip", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"
dotenvy = "0.15"
rusqlite = { version = "0.40", features = ["bundled"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
