[package]
name = "ccproxy"
version = "0.1.0"
edition = "2021"
description = "Local OpenAI/Anthropic to Codex Responses proxy with ChatGPT OAuth and upstream HTTP proxy support."
license = "MIT"
readme = "README.md"
repository = "https://github.com/chenanchina/ccProxy"

[[bin]]
name = "ccproxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "http2", "gzip", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"
dotenvy = "0.15"
rusqlite = { version = "0.40", features = ["bundled"] }

[profile.release]
opt-level = "z"
lto = true
strip = true

[package.metadata.deb]
maintainer = "Austin <austin82@gmail.com>"
copyright = "2026 Austin"
license-file = ["LICENSE", "0"]
extended-description = "Local proxy that converts Anthropic Messages API requests into OpenAI Responses API calls against the ChatGPT/Codex backend, with token management and usage tracking."
section = "net"
priority = "optional"
depends = "$auto"
maintainer-scripts = "packaging/scripts"
assets = [
    ["target/release/ccproxy", "usr/bin/", "755"],
    ["packaging/ccproxy.service", "lib/systemd/system/ccproxy.service", "644"],
    [".env.example", "usr/share/ccproxy/env.example", "644"],
    ["README.md", "usr/share/doc/ccproxy/README.md", "644"],
]
