[package]
name = "ccproxy"
version = "0.1.0"
edition = "2021"
description = "Local OpenAI/Anthropic to Codex Responses proxy with ChatGPT OAuth and upstream HTTP proxy support."
license = "MIT"
readme = "README.md"
repository = "https://github.com/chenanchina/ccProxy"

[[bin]]
name = "ccproxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "http2", "gzip", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"
dotenvy = "0.15"
rusqlite = { version = "0.40", features = ["bundled"] }

[profile.release]
opt-level = "z"
lto = true
strip = true

[package.metadata.deb]
maintainer = "Austin <austin82@gmail.com>"
copyright = "2026 Austin"
license-file = ["LICENSE", "0"]
extended-description = "Local proxy that converts Anthropic Messages API requests into OpenAI Responses API calls against the ChatGPT/Codex backend, with token management and usage tracking."
section = "net"
priority = "optional"
depends = "$auto"
maintainer-scripts = "packaging/scripts"
assets = [
    ["target/release/ccproxy", "usr/bin/", "755"],
    ["packaging/ccproxy.service", "lib/systemd/system/ccproxy.service", "644"],
    [".env.example", "usr/share/ccproxy/env.example", "644"],
    ["README.md", "usr/share/doc/ccproxy/README.md", "644"],
]

[package.metadata.generate-rpm]
auto-req = "disabled"
assets = [
    { source = "target/release/ccproxy", dest = "/usr/bin/ccproxy", mode = "755" },
    { source = "packaging/ccproxy.service", dest = "/lib/systemd/system/ccproxy.service", mode = "644" },
    { source = ".env.example", dest = "/usr/share/ccproxy/env.example", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/ccproxy/README.md", mode = "644", doc = true },
]
post_install_script = """
mkdir -p /etc/ccproxy /var/lib/ccproxy
chmod 755 /var/lib/ccproxy
if [ ! -f /etc/ccproxy/.env ]; then
    cp /usr/share/ccproxy/env.example /etc/ccproxy/.env
    chmod 600 /etc/ccproxy/.env
fi
systemctl daemon-reload 2>/dev/null || true
if [ "$1" = "1" ]; then
    systemctl enable ccproxy.service 2>/dev/null || true
fi
systemctl restart ccproxy.service 2>/dev/null || true
"""
pre_uninstall_script = """
if [ "$1" = "0" ]; then
    systemctl stop ccproxy.service 2>/dev/null || true
    systemctl disable ccproxy.service 2>/dev/null || true
fi
"""
post_uninstall_script = """
systemctl daemon-reload 2>/dev/null || true
"""
